[gd_scene load_steps=36 format=2]

[ext_resource path="res://Enemies/EnemyBoss.gd" type="Script" id=1]
[ext_resource path="res://sprites/png/male/Walk (1).png" type="Texture" id=2]
[ext_resource path="res://sprites/png/male/Walk (2).png" type="Texture" id=3]
[ext_resource path="res://sprites/png/male/Walk (3).png" type="Texture" id=4]
[ext_resource path="res://sprites/png/male/Walk (4).png" type="Texture" id=5]
[ext_resource path="res://sprites/png/male/Walk (5).png" type="Texture" id=6]
[ext_resource path="res://sprites/png/male/Walk (6).png" type="Texture" id=7]
[ext_resource path="res://sprites/png/male/Walk (7).png" type="Texture" id=8]
[ext_resource path="res://sprites/png/male/Walk (8).png" type="Texture" id=9]
[ext_resource path="res://sprites/png/male/Walk (9).png" type="Texture" id=10]
[ext_resource path="res://sprites/png/male/Walk (10).png" type="Texture" id=11]
[ext_resource path="res://sprites/png/male/Attack (3).png" type="Texture" id=12]
[ext_resource path="res://sprites/png/male/Attack (4).png" type="Texture" id=13]
[ext_resource path="res://sprites/png/male/Attack (5).png" type="Texture" id=14]
[ext_resource path="res://sprites/png/male/Attack (6).png" type="Texture" id=15]
[ext_resource path="res://sprites/png/male/Attack (7).png" type="Texture" id=16]
[ext_resource path="res://sprites/png/male/Attack (8).png" type="Texture" id=17]
[ext_resource path="res://sprites/png/male/Dead (1).png" type="Texture" id=18]
[ext_resource path="res://sprites/png/male/Dead (2).png" type="Texture" id=19]
[ext_resource path="res://sprites/png/male/Dead (3).png" type="Texture" id=20]
[ext_resource path="res://sprites/png/male/Dead (4).png" type="Texture" id=21]
[ext_resource path="res://sprites/png/male/Dead (5).png" type="Texture" id=22]
[ext_resource path="res://sprites/png/male/Dead (6).png" type="Texture" id=23]
[ext_resource path="res://sprites/png/male/Dead (7).png" type="Texture" id=24]
[ext_resource path="res://sprites/png/male/Dead (8).png" type="Texture" id=25]
[ext_resource path="res://sprites/png/male/Dead (9).png" type="Texture" id=26]
[ext_resource path="res://sprites/png/male/Dead (10).png" type="Texture" id=27]
[ext_resource path="res://sprites/png/male/Dead (11).png" type="Texture" id=28]
[ext_resource path="res://sprites/png/male/Dead (12).png" type="Texture" id=29]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.054902, 1, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 38.9752
height = 22.417

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ) ],
"loop": true,
"name": "attack",
"speed": 7.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "die",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
radius = 279.634
height = 475.468

[sub_resource type="CapsuleShape2D" id=5]
radius = 47.5548
height = 7.0302

[sub_resource type="CapsuleShape2D" id=6]
radius = 38.0616
height = 28.4509

[node name="EnemyBoss" type="KinematicBody2D"]
collision_layer = 5
collision_mask = 6
script = ExtResource( 1 )

[node name="Lifebar" type="ProgressBar" parent="."]
anchor_right = 1.0
margin_left = -21.7204
margin_top = -45.0267
margin_right = 42.2796
margin_bottom = -36.0267
custom_styles/fg = SubResource( 1 )
value = 100.0
percent_visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 12.4486, 26.9929 )
shape = SubResource( 2 )

[node name="RayCastTank" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )

[node name="RayCastBat" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 9.03927, 20.6017 )
scale = Vector2( 0.211444, 0.207111 )
frames = SubResource( 3 )
animation = "walk"
frame = 4
playing = true

[node name="EnemyBossDetectionRange" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyBossDetectionRange"]
rotation = 1.5708
shape = SubResource( 4 )

[node name="HitBoxBoss" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxBoss"]
position = Vector2( 9.31018, 28.4942 )
shape = SubResource( 5 )

[node name="HurtBoxBoss" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBoxBoss"]
position = Vector2( 12.652, 29.9873 )
shape = SubResource( 6 )
[connection signal="area_entered" from="EnemyBossDetectionRange" to="." method="_on_EnemyBossDetectionRange_area_entered"]
[connection signal="area_exited" from="EnemyBossDetectionRange" to="." method="_on_EnemyBossDetectionRange_area_exited"]
[connection signal="area_entered" from="HitBoxBoss" to="." method="_on_HitBoxBoss_area_entered"]
[connection signal="area_exited" from="HitBoxBoss" to="." method="_on_HitBoxBoss_area_exited"]
[connection signal="area_entered" from="HurtBoxBoss" to="." method="_on_HurtBoxBoss_area_entered"]
